insult/.nodeshift/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: insult
spec:
  template:
    spec:
      containers:
        - readinessProbe:
            httpGet:
              path: /health/readiness
              port: 8080
              scheme: HTTP
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
